# MathCATForWeb

./: Cargo.toml  LICENSE  README.md  build.rs  index.html
pkg/: README.md  mathcat_web.d.ts  mathcat_web.js  mathcat_web_bg.wasm  mathcat_web_bg.wasm.d.ts  package.json
src/: lib.rs
