[package]
name = "mathcat_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.29"
js-sys = "0.3.35"
futures = "0.3.15"

[dependencies.mathcat]
# version = "0.3.1"
# for testing MathCAT without having to publish a new version 
path = "../MathCAT/"
