[package]
name = "mathcat_web"
version = "0.1.0"
edition = "2021"

[features]
wasm = []
include-zip = []

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
mathcat = { path = "../MathCAT/", features = ["include-zip"] }

# [dependencies.mathcat]
# version = "0.3.1"
# for testing MathCAT without having to publish a new version 
# path = "../MathCAT/"

[profile.release]
lto = true  # change to true after debugging
opt-level = "z"  # Optimize for size.
